# csmp_search_engine

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
services/fastapi_service/: Dockerfile  Dockerfile.tests  requirements.txt
services/fastapi_service/app/: adducts_lookup_table.csv  db_search_client.py  file_formats.py  inference_config.py  main.py  models.py  spectrum_encoder_client.py  spectrum_parser.py  utils.py
services/fastapi_service/test_cases/: currupted.mgf  test_file.json  test_file.mgf  test_file.msp  test_file.mzML  test_file_without_precursor.json  test_file_without_precursor.mgf  test_file_without_precursor.msp  test_file_without_precursor.mzML
services/fastapi_service/tests/: run_api_tests.py
services/postgres_service/: Dockerfile
services/postgres_service/initdb/: 01_schema.sql  02_seed_from_csv.sql  03_indexes.sql
services/postgres_service/scripts/: reload_from_csv.sql
services/streamlit_service/: Dockerfile  app.py  requirements.txt
services/triton_service/: Dockerfile  README.md
